--- a/src/mysanctool/viewobjects/loginStyleSheet.css
+++ b/src/mysanctool/viewobjects/loginStyleSheet.css
@@ -5,12 +5,12 @@ and open the template in the editor.
 */
 /* 
     Created on : 30.07.2018, 19:47:21
-    Author     : Deniz
+    Author     : Deniz Durak
 */
 
 
 .root {
-    -fx-background-color:  black;
+    -fx-background-color:  white;
 }
 
 .label {
@@ -21,5 +21,17 @@ and open the template in the editor.
 }
 
 #cssHeader {
+    -fx-background-color: white;
+}
+
+#cssRightSide {
+    -fx-background-color: white;
+}
+
+#cssLeftSide {
+    -fx-background-color: white;
+}
+
+#cssBottom {
     -fx-background-color: white;
 }
